193 - Fix for text overflow in conversation modules.

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1859,6 +1859,7 @@ margin-bottom: 0;
 float: left;
 margin-right: 15px;
 }
+div.three-col-sm div.cols.call-out p {word-wrap: break-word;}
 
 /*- Aside Module ----------*/
 
